syntax = "proto3";

package ipfsv2;

enum ActionType {
  ACTION_TYPE_UNKNOWN = 0;
  ADD_EDIT = 1;
  IMPORT_SPACE = 2;
  ARCHIVE_SPACE = 3;
}

message Metadata {
    string version = 1;
    ActionType type = 2;
}

message Edit {
  // ------------------
  // version and type are defined on every IPFS action
  // ------------------
  string version = 1;
  ActionType type = 2; // Should always be 1 for ADD_EDIT

  string id = 3;
  string name = 4;
  repeated Op ops = 5;
  repeated string authors = 6;
}

enum OpType {
  OP_TYPE_UNKNOWN = 0;
  CREATE_ENTITY = 1;
  UPDATE_ENTITY = 2;
  DELETE_ENTITY = 3;
  CREATE_RELATION = 4;
  DELETE_RELATION = 5;
  REORDER_RELATION = 6;
  UNSET_PROPERTIES = 7;
  CREATE_PROPERTY = 8;
  ARCHIVE_PROPERTY = 9;
  MOVE_ENTITY = 10;
  MERGE_ENTITIES = 11;
  BRANCH_ENTITY = 12;
  // @TODO impl enables us to map an entity with it. What happens
  // if there's more than one CREATE_SPACE for the same address? ignore?
  // Should this be an Op instead of an action?
  // SET_SPACE_ENTITY = 4;
}

// @TODO: Use oneof instead of these weird optional state machines
message Op {
  OpType type = 1;

  /**
   * Used when setting batch ops or deleting an entity
   */
  optional Entity entity = 2;

  /**
   * Used when creating or deleting a relation
   */
  optional Relation relation = 3;

  optional PropertyDefinition property = 4;

  /**
   * Used when importing a csv file
   */
  // optional string url = 4;
  // optional ImportCsvMetadata metadata = 5;
}

message PropertyDefinition {
  bytes id = 1;
  bytes type = 2;
  bytes name = 3;
}

message Relation {
  bytes id = 1;
  bytes type = 2;
  bytes from_entity = 3;
  bytes from_property = 4;
  bytes to_entity = 5;
  bytes to_space = 6;
  bytes entity = 7;
  bytes index = 8;
}

message Entity {
    bytes id = 1;
    repeated PropertyValue properties = 2;
}

message PropertyValue {
    bytes id = 1;
    // If we are in an UNSET_PROPERTIES op we don't
    // need to pass the value
    optional Value value = 2;
}

message Value {
    bytes value = 1;
    optional Options options = 2;
}

message Options {
    bytes unit = 1;
    bytes format = 2;
}
